--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <head>
         <script>
-      //  alert(window.location.hostname);
+          console.log(window.location.hostname);
+          var host =window.location.hostname;
         function loadDoc() {
                     var xhttp = new XMLHttpRequest();
                     xhttp.onreadystatechange=function() {
@@ -11,7 +12,7 @@
                     };
                    let text = document.getElementById('t').value;
                     alert(text);
-                    xhttp.open("GET", `http://localhost:8080/list?item=${text}`, true);
+                    xhttp.open("GET", `http://${host}/list?item=${text}`, true);
                     xhttp.send();
 }
         </script>
