--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
                     xhttp.onreadystatechange=function() {
                         if (this.readyState == 4 && this.status == 200) {
                         document.getElementById("content").innerHTML = `<img src ='${JSON.parse(this.responseText)['value']}'/>`;
+                            console.log(`<img src ='${JSON.parse(this.responseText)['value']}'/>`);
                         }
                     };
                    let text = document.getElementById('t').value;
                     alert(text);
-                    xhttp.open("GET", `http://${host}/list?item=${text}`, true);
+                    xhttp.open("GET", `http://${host}/?item=${text}`, true);
                     xhttp.send();
 }
         </script>
