--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
                     var xhttp = new XMLHttpRequest();
                     xhttp.onreadystatechange=function() {
                         if (this.readyState == 4 && this.status == 200) {
-                        document.getElementById("content").innerHTML = `<img src ='${JSON.parse(this.responseText)['value']}'/>`;
+                        document.getElementById("content").innerHTML = `<img src ="${JSON.parse(this.responseText)['value']}"/>`;
                             console.log(`<img src ='${JSON.parse(this.responseText)['value']}'/>`);
                         }
                     };
                    let text = document.getElementById('t').value;
-                    alert(text);
-                    xhttp.open("GET", `http://${host}/?item=${text}`, true);
+                   let url = `http://${host}/?item=${text}`;
+                   console.log(text);
+                    console.log(url);
+                    xhttp.open("GET", url, true);
                     xhttp.send();
 }
         </script>
