--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
     <head>
+       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script>
           console.log(window.location.hostname);
           var host =window.location.hostname;
-        function loadDoc() {
+        /*function loadDoc() {
                     var xhttp = new XMLHttpRequest();
                     xhttp.onreadystatechange=function() {
                         if (this.readyState == 4 && this.status == 200) {
@@ -17,11 +18,24 @@
                     console.log(url);
                     xhttp.open("GET", url, true);
                     xhttp.send();
-}
+}*/
+         $(document).ready(function(){
+                $("#bt1").click(function(){
+                    //let text = document.getElementById('t').value;
+                    let url = `http://${host}/getitem`;
+                    $.get(url,
+                    {
+                      
+                    },
+                    function(data,status){
+                        console.log("Data: " + data + "\nStatus: " + status);
+                    });
+                });
+        });
         </script>
     </head>
     <body>
-            <button onclick="loadDoc();">Click</button>
+            <button id = 'bt1'>Click</button>
             <input type='text' id = 't'/>
             <div id = 'content'>
                 <img src = 'https://wallpapercave.com/wp/wc1686615.jpg'/>
