--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 $("#bt1").click(function(){
                     //let text = document.getElementById('t').value;
                     let url = `http://${host}/getitem`;
-                    $.get(url,
+                    $.get('https://nodeton.herokuapp.com/getitem',
                     {
                       
                     },
