--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     function(data,status){
                        //var htmlImg =  JSON.parse(data);
                         $('#content').html(data);
-                        console.log("Data: " + data + "\nStatus: " + status);
+                        console.log(data);
                     });
                 });
         });
