--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                        //var htmlImg =  JSON.parse(data);
                         var arrImg = data['value'];
                         $('#content').html('');
-                        for(element:arrImg){
+                        for(element in arrImg){
                           $('#content').append(element);  
                         }
                         //$('#content').html(data['value']);
