--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         var arrImg = data['value'];
                         $('#content').html('');
                         for(element in arrImg){
-                          $('#content').append(element);  
+                          $('#content').append(arrImg[element]);  
                         }
                         //$('#content').html(data['value']);
                         console.log(data['value']);
